2011-03-16  Scott James Remnant  <scott@netsplit.com>

	* init/environ.c (environ_all_valid): Only verify that an = is present
	(environ_valid): Drop this function, the part of POSIX I read about
	valid environment variable names only applies to other things defined
	by POSIX, elsewhere it explicitly says Applications may do whatever
	they like (and even encourages to avoid conflict)
	(environ_expand_until): Remove validity check for name.
	* init/environ.h: Update header.
	* init/tests/test_environ.c (test_valid): Drop tests.
	(test_all_valid): Drop name tests.
	(test_expand): Remove illegal expansion test.
	* init/tests/test_control.c (test_emit_event): Remove the test case for
	an invalid name in the environment.
	* init/tests/test_job_class.c (test_start, test_stop)
	(test_restart): Change the invalid argument tests to use an entry
	without an = as the invalid test.

	* util/reboot.c: pass '-H' to shutdown when called as 'halt'

	* init/job_process.c (job_process_handler): Check the job's normal exit
	list, decrease log priority of messages from warning to information if
	the exit status or signal is in the list.
	* init/tests/test_job_process.c (test_handler): Change the normal exit
	test cases to not expect the warning

	* init/job_process.c (job_process_run): Prepend a shell command to the
	pasted script to force the shell to close the file descriptor being
	used to paste the script. The shell will already have a new copy when
	it opened the path.

2011-03-15  James Hunt  <james.hunt@ubuntu.com>

	* init/conf.c (conf_source_reload, conf_source_reload_dir): Fix typos
	in doc-strings
	* init/job_process.c (job_process_run): Fix typo in doc-string
	* init/parse_job.c (stanza_env): Fix typo in doc-string

2011-03-15  Patty Langasek  <harmoney@dodds.net>

	* init/man/init.5: Grammar fixes

2011-03-15  Jacek Konieczny  <jajcus@jajcus.net>

	* contrib/vim/syntax/upstart.vim: Further improve syntax hilighting

2011-03-01  Scott James Remnant  <scott@netsplit.com>
